@@ -3257,7 +3257,7 @@ namespace libtorrent
 			{
 				std::string new_filename = mapped_files->list_string_value_at(i);
 				if (new_filename.empty()) continue;
-				rename_file(i, new_filename);
+				m_torrent_file->rename_file(i, new_filename);
 			}
 		}
 
